--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ tokio = "1.18.2"
 serde_json = "1.0"
 siwe = "0.3"
 lazy_static = "1.4.0"
+clap = {version = "3.1.18", features = ["derive"]}
+redis = "0.21.5"
+async-std = {version = "1.11.0",features = ["attributes", "tokio1"]}
 
 [dependencies.rocket_dyn_templates]
 version = "0.1.0-rc.2"
